@@ -43,8 +43,9 @@ system <- function(command, intern = FALSE,
         f <- tempfile()
         on.exit(unlink(f))
         writeLines(input, f)
-        # cat(input, file=f, sep="\n")
-        command <- paste(command, "<", shQuote(f))
+##        command <- paste(command, "<", shQuote(f))
+        ## change to use shell-execution-environment redirection, PR#15508
+        command <- paste("<", shQuote(f), command)
     }
     if(!wait && !intern) command <- paste(command, "&")
     .Internal(system(command, intern))
@@ -97,7 +98,7 @@ system2 <- function(command, args = character(),
         f <- tempfile()
         on.exit(unlink(f))
         writeLines(input, f)
-        # cat(input, file=f, sep="\n")
+        ## here 'command' is a single command, unlike system()
         command <- paste(command, "<", shQuote(f))
     } else if (nzchar(stdin)) command <- paste(command, "<", stdin)
     if(!wait && !intern) command <- paste(command, "&")
